--- a/registry.html
+++ b/registry.html
@@ -122,10 +122,9 @@
 <p>
 All we really want is your presence. However if you would like to, you can also give us presents.
 </p>
-Registries at the following providers:
+Registry at the following provider:
 <ul>
 <li><a href="http://yuppiechef.com/yc2702473">Yuppiechef</a></li>
-<li><a href="https://www.home.co.za/giftlist/giftRegistry.jsp?pageName=giftRegistryView&giftlistId=gl198105668">@Home</a></li>
 </ul>
 
 
