--- a/registry.html
+++ b/registry.html
@@ -120,12 +120,17 @@
     
     
 <p>
-All we really want is your presence. However if you would like to, you can also give us presents.
+All we really want is your presence. However if you would like to, you can also give us presents?
 </p>
 Registry at the following provider:
 <ul>
 <li><a href="http://yuppiechef.com/yc2702473">Yuppiechef</a></li>
 </ul>
+
+If you prefer to contribute financially to help us start our lives together:<br> 
+R Retief<br>
+Capitec Savings Account <br>
+1378057404<br>
 
 
      <hr id="content-divider"/>
