Gift registry navigation

--- a/registry.html
+++ b/registry.html
@@ -106,7 +106,7 @@
             id='current' 
            >
            
-             <img src="http://emoji.fileformat.info/gemoji/gift.png" class="gift-icon"/>
+             <img src="http://emoji.fileformat.info/gemoji/gift.png" class="gift-icon"/> Registry
            
         </a>
 
