Registry font fix #2

--- a/registry.html
+++ b/registry.html
@@ -119,6 +119,9 @@
      <hr id="content-divider"/>
     
     
+<table width="828" cellspacing="10" cellpadding="10">
+<tbody>
+<td>
 <p>
 All we really want is your presence. However if you would like to, you can also give us presents?
 </p>
@@ -131,6 +134,9 @@ If you prefer to contribute financially to help us start our lives together:<br>
 R Retief<br>
 Capitec Savings Account <br>
 1378057404<br>
+</td>
+</tbody>
+</table>
 
 
      <hr id="content-divider"/>
