--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <div class="front-image">
       <img width=540 height=540 src="static/images/couple.jpg"/>
-      <center><small><p style="color:lightgrey">(foto deur Francois Malan)</p></small></center>
+      <center><small><p style="color:lightgrey">(foto deur <a href="http://francoismalan.com/" style="color:lightgrey">Francois Malan</a>)</p></small></center>
     </div>
     
     
